tempfile/derive_more/tests/compile_fail/debug/duplicate_fmt_on_variant.rs
#[derive(derive_more::Debug)]
pub enum Foo {
    #[debug("Test")]
    #[debug("Second")]
    Unit,
}

fn main() {}
